--- a/Vue/demo-simple-router/package.json
+++ b/Vue/demo-simple-router/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dashboardvue",
+  "name": "demo-simple-router",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -20,7 +20,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "sass": "^1.24.4",
+    "sass-loader": "^8.0.1"
   },
   "eslintConfig": {
     "root": true,
